--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -53,7 +53,7 @@
     top: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
     .header .menu {
         display: block;
         align-self: flex-end;
@@ -74,7 +74,7 @@
 
     .header nav {
         position: absolute;
-        top: 8px;
+        top: 18px;
         right: 40px;
         z-index: 1;
     }
@@ -93,5 +93,11 @@
         padding: 10px 0;
         color: black;
         
+    }
+}
+
+@media (max-width: 375px) {
+    .header nav {
+        top: 12px;
     }
 }
