--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,6 +35,7 @@ html {
 
 .container ul li a {
     font-size: 20px;
+    font-weight: 500;
     transition: 0.3s;
     padding: 3px 10px;
     border-radius: 10px;
@@ -42,10 +43,91 @@ html {
 }
 
 .container ul li a:hover {
-    background-color: gold;
-    color: black;
+    color: gold;
 }
 
-.container-hero {
-    
+.header .container nav {
+    margin-right: 20px;
+}
+
+.header .container nav ul li #home{
+    color: gold;
+}
+
+.hero .container-hero {
+    background-image: url(../images/banner-bg.png);
+    width: 100%;
+    background-size: cover;
+    height: 486px;
+    background-repeat: no-repeat;
+}
+
+.hero .container-hero .texto {
+    padding: 60px 0 0 60px;
+    color: #fff;
+}
+
+.hero .container-hero .texto h2 {
+    font-size: 70px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.hero .container-hero .texto h2:first-child {
+    font-size: 60px;
+    font-weight: bolder;
+    color: #000;
+}
+
+.hero .container-hero .texto p {
+    width: 350px;
+    font-size: 16px;
+    padding-bottom: 50px;
+}
+
+.hero .container-hero .texto a {
+    font-size: 14px;
+    padding: 15px 25px;
+    background-color: black;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+
+.hero .container-hero .texto a:hover {
+    color: gold;
+    border: 1px solid gold;
+}
+
+@media (max-width: 850px) {
+    .hero .container-hero {
+        background-image: url(../images/banner-bg-tablet.png);
+}
+}
+
+@media (max-width: 425px) {
+    .hero .container-hero .texto h2 {
+        font-size: 60px;
+    }
+
+    .hero .container-hero .texto h2:first-child {
+        font-size: 50px;
+    }
+
+    .hero .container-hero .texto p {
+        font-size: 14px;
+    }
+
+    .hero .container-hero .texto a {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 375px) {
+    .header .container .logo {
+        font-size: 30px;
+    }
+
+    .hero .container-hero .texto {
+        padding: 30px 0 0 30px;
+    }
 }
