--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -101,3 +101,5 @@
         top: 12px;
     }
 }
+
+/* acomodar el padding del container del texto de la seccion banner el rigth no esta ordenado */
