--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -14,7 +14,7 @@
 }
 
 .testimonials .container p {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: justify;
 }
 
@@ -25,22 +25,59 @@
 
 .testimonials .container .testemunhas h2 {
     padding-bottom: 15px;
+    font-weight: 500;
+    
 }
 
-.testimonials .container .testemunhas .testemunho1, .testimonials .container .testemunhas .testemunho2, .testimonials .container .testemunhas .testemunho3 {
+.testimonials .container .testemunhas .testemunho1,
+.testimonials .container .testemunhas .testemunho2,
+.testimonials .container .testemunhas .testemunho3 {
     flex: 1 1 0;
-    border: solid 2px gold;
+    /* border: solid 1px gold; */
     border-radius: 10px;
     padding: 15px;
+    transition: 0.3s;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
 }
 
-.testimonials .container .testemunhas .testemunho1, .testimonials .container .testemunhas .testemunho3 {
+.testimonials .container .testemunhas .testemunho1 p::first-letter,
+.testimonials .container .testemunhas .testemunho2 p::first-letter,
+.testimonials .container .testemunhas .testemunho3 p::first-letter {
+    font-size: 25px;
+}
+
+.testimonials .container .testemunhas .testemunho1 p,
+.testimonials .container .testemunhas .testemunho2 p,
+.testimonials .container .testemunhas .testemunho3 p {
+    padding: 0 20px;
+}
+
+.testimonials .container .testemunhas .fas.fa-quote-left {
+    font-size: 20px;
+    color: gold;
+}
+
+.testimonials .container .testemunhas .testemunho1,
+.testimonials .container .testemunhas .testemunho3 {
     margin-bottom: 150px;
 }
 
 .testimonials .container .testemunhas .testemunho2:nth-child(2) {
     margin: 150px 25px 0 25px;
 
+}
+
+.testimonials .container .testemunhas .testemunho1:hover,
+.testimonials .container .testemunhas .testemunho2:hover,
+.testimonials .container .testemunhas .testemunho3:hover {
+    background-color: #ffea70c7;
+    border: solid 1px #222222;
+}
+
+.testimonials .container .testemunhas .testemunho1:hover i,
+.testimonials .container .testemunhas .testemunho2:hover i,
+.testimonials .container .testemunhas .testemunho3:hover i {
+    color: #222222;  
 }
 
 @media (max-width: 900px) {
