--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -33,14 +33,14 @@
 }
 
 .footer .container-footer .footer-menu ul li a:hover {
-    color: gold;
+    color: var(--cor-primaria);
     font-weight: 300;
 }
 
 .footer .container-footer h2 {
     font-size: 28px;
     font-weight: 500;
-    color: gold;
+    color: var(--cor-primaria);
     padding-bottom: 15px;
 }
 
@@ -54,7 +54,7 @@
 }
 
 .footer .container-footer .contact ul li a:hover {
-    color: gold;
+    color: var(--cor-primaria);
     font-weight: 300;
 }
 
@@ -62,6 +62,15 @@
 .footer .container-footer .contact .fas.fa-phone-alt,
 .footer .container-footer .contact .fas.fa-envelope {
     padding-right: 10px;
+}
+
+.footer .direitos-autorais {
+    background-color: #000;
+    color: #fff;
+    padding-bottom: 20px;
+    font-size: 15px;
+    font-weight: 300;
+    text-align: center;
 }
 
 @media (max-width: 1010px) {
@@ -101,5 +110,27 @@
 
     .footer .container-footer .about {
         padding: 30px 0 0 0;
+    }
+}
+
+@media (max-width: 500px) {
+    .footer .container-footer {
+        padding: 60px 30px 60px 30px;
+    }
+}
+
+@media (max-width: 400px) {
+    .footer .container-footer {
+        grid-template-areas: "footer-menu" "about" "contact";
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr 200px 150px;
+    }
+}
+
+@media (max-width: 350px) {
+    .footer .container-footer {
+        grid-template-areas: "footer-menu" "about" "contact";
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr 250px 150px;
     }
 }
