--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -22,7 +22,7 @@
 }
 
 .informacoes-grid h2 {
-    color: gold;
+    color: var(--cor-primaria);
     font-size: 40px;
     font-weight: 700;
     text-transform: uppercase;
@@ -372,7 +372,7 @@
 }
 
 .gallery a:hover {
-    background-color: gold;
+    background-color: var(--cor-primaria);
     color: #000;
     border: 1px solid #000;
     font-weight: 500;
@@ -410,6 +410,24 @@
 
 @media (max-width: 450px) {
     .gallery .container {
+        max-width: 100%;
+        display: grid;
+        grid-template-areas: "informacoes-grid" "foto1" "foto2" "foto3" "foto4" "foto5" "foto6" "foto7" "foto8" "foto9";
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px 250px 250px 250px 250px 250px 250px 250px 250px 250px;
+    }
+    
+    .gallery .container {
         padding: 90px 60px 30px 60px;
+    }
+}
+
+@media (max-width: 350px) {
+    .gallery .container {
+        max-width: 100%;
+        display: grid;
+        grid-template-areas: "informacoes-grid" "foto1" "foto2" "foto3" "foto4" "foto5" "foto6" "foto7" "foto8" "foto9";
+        grid-template-columns: 1fr;
+        grid-template-rows: 250px 250px 250px 250px 250px 250px 250px 250px 250px 250px;
     }
 }
