cambiando formato de imagenes para webp menos peso

--- a/src/css/contato-maps.css
+++ b/src/css/contato-maps.css
@@ -4,7 +4,7 @@
 }
 
 .contato-maps .contato {
-    background-image: url(../images/img-3.png);
+    background-image: url(../images/img-3.webp);
     background-size: cover;
     color: #fff;
     display: flex;
