--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,7 +1,7 @@
 /* SECTION SERVICES */
 
 .services {
-    background-image: url(../images/services-bg.png);
+    background-image: url(../images/services-bg.webp);
     max-width: 100%;
     background-attachment: fixed;
     max-height: 100%;
