--- a/src/css/contato-maps.css
+++ b/src/css/contato-maps.css
@@ -1,6 +1,7 @@
 .contato-maps {
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 .contato-maps .contato {
@@ -11,6 +12,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 50%;
 }
 
 .contato-maps .contato .inputs {
@@ -55,13 +57,14 @@
     transition: 0.3s;
 }
 
+.contato-maps .map {
+    width: 50%;
+    height: 100%;
+}
+
 .contato-maps .contato .btn:hover {
     background-color: coral;
     color: #fff;
-}
-
-.contato-maps .contato .map {
-    width: 50%;
 }
 
 @media (max-width: 900px) {
@@ -69,7 +72,11 @@
         flex-direction: column;
     }
 
-    .contato-maps .contato, .map {
+    .contato-maps .contato {
+        width: 100%;
+    }
+
+    .contato-maps .map {
         width: 100%;
     }
 }
@@ -77,6 +84,10 @@
 @media (max-width: 550px) {
     .contato-maps .contato .input-text {
         width: 300px;
+    }
+
+    .contato-maps .contato h2 {
+        text-align: center;
     }
 
     .contato-maps .contato .btn {
